// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Actor component renders when active 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#aaa",
      "borderColor": "#fff",
      "borderWidth": 5,
      "flexDirection": "row",
      "height": 60,
      "justifyContent": "space-evenly",
      "padding": 10,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 18,
        "textAlign": "center",
      }
    }
  >
    Test Actor
  </Text>
  <Text
    style={
      Object {
        "fontSize": 18,
        "textAlign": "center",
        "width": 60,
      }
    }
  >
    30
  </Text>
</View>
`;

exports[`the Actor component renders when non active 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#eee",
      "borderColor": "#fff",
      "borderWidth": 5,
      "flexDirection": "row",
      "height": 45,
      "justifyContent": "space-evenly",
      "padding": 10,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "flex": 1,
        "fontSize": 18,
        "textAlign": "center",
      }
    }
  >
    Test Actor
  </Text>
  <Text
    style={
      Object {
        "fontSize": 18,
        "textAlign": "center",
        "width": 60,
      }
    }
  >
    30
  </Text>
</View>
`;
